# smart-mdt

./: .gitignore  README.md  pyproject.toml
data/: HTRU_2-bin.dl8  (+37 more)
smart-mdt-rs/: Cargo.toml  README.md  compare_python_rust.py  pythonfull_results.csv
smart-mdt-rs/benches/: axp_extraction.rs  sat_backends.rs  split_search.rs
smart-mdt-rs/docs/: ALGORITHM_DESIGN.md  CALS_COMPACT_EXPLAIN_V2.md  CALS_MDT_ABLATION_PROTOCOL.md  CALS_MDT_ALGORITHM.md  CALS_MDT_PERFORMANCE.md  CALS_MDT_PRUNING.md  CALS_MDT_SEARCH.md  CALS_MDT_THEORY_SAFETY.md  CALS_OPTIMIZATION_BASELINE.md  EXPERIMENT_PROTOCOL.md  NON_EXPERT_EXPLANATION.md  PERFORMANCE_BASELINE.md  PYTHON_COMPARISON_PLAN.md  THEORY_BOUNDARY.md
smart-mdt-rs/examples/: explain_one_instance.rs  train_car.rs
smart-mdt-rs/rust_results/: theorem_certified_results.csv
smart-mdt-rs/src/: lib.rs  main.rs
smart-mdt-rs/tests/: adaptive_language.rs  audit_affine.rs  audit_backend_axp.rs  audit_core.rs  audit_dataset_loader.rs  audit_debug_candidates.rs  audit_dl8_protocol.rs  audit_explain.rs  audit_predicate_complement.rs  audit_sat.rs  audit_tree_benchmark.rs  axp_reranking.rs  branch_and_bound.rs  brute_force_equivalence.rs  cache_memoization.rs  compact_explain_cli.rs  conditional_search.rs  cost_complexity_pruning.rs  explanation_renderer.rs  global_beam_search.rs  incremental_statistics.rs  parallel_determinism.rs  path_theory_state.rs  post_selection_axp.rs  regression_theorem_boundary.rs  split_scoring.rs  unified_cals.rs  unit_explain.rs  unit_logic.rs  unit_sat.rs  unit_search.rs  unit_tree.rs  verified_explanation.rs
(+103 files in other folders)
